2006-12-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* data/browscap.ini: added msdomversion for ie6/7,
	fixed ecmascriptversion in ie6/7

2006-11-28  Marek Habersack  <grendello@gmail.com>

	* data/net_2_0/web.config: Added the imported namespaces statement
	for ASP.NET compilation.

2006-11-17  Wade Berrier  <wberrier@novell.com>

	* configure.in: version bump to 1.2.1

Thu Nov 16 12:59:50 CET 2006 Paolo Molaro <lupus@ximian.com>

	* configure.in: added --disable-mcs-build for use
	with embedded systems or other cases where we don't want
	or can't to spend time compiling the managed part of the runtime.

2006-11-02  Wade Berrier  <wberrier@novell.com>

	* configure.in: version bump to 1.2

2006-11-02 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* data/net_2_0/machine.config: defaultProxy section is no longer 
	  necessary, so remove.

2006-11-01  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add type checks for blkcnt_t, blksize_t, suseconds_t.  Some
	  versions of Mac OS X don't define these, needed by support/map.c.

2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add type checks for structs pollfd, stat, timeval, timezone.
	  This is so that support/map.c can use HAVE_STRUCT_... wrappers around
	  structure conversion functions, allowing them to be omitted from the Win32
	  build.

2006-10-16  Kornél Pál  <kornelpal@gmail.com>

	* libmono.vcproj: Removed unicode.h and unicode.c. Changed absolute
	  path in AdditionalLibraryDirectories to relative.

2006-10-13  Joe Shaw  <joeshaw@novell.com>

	* samples/size/size.c: Flesh this out quite a bit more so that
	its results are more accurate.
	* samples/size/sample.cs: Add a few more test cases.

2006-10-12  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Disable visibility("hidden") on cygwin as well.

2006-10-10  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Get rid of --with-nptl.

Sat Sep 30 12:11:56 CEST 2006 Paolo Molaro <lupus@ximian.com>
