@@ -1,7 +1,7 @@
 prefix=${pcfiledir}/../..
 exec_prefix=${pcfiledir}/../..
 libdir=${prefix}/lib
-includedir=${prefix}/include
+includedir=${prefix}/include/mono-@API_VER@
 
 
 Name: Mono Interpreter
