@@ -1,3 +1,9 @@
+
+Mon Dec 11 10:23:18 CET 2006 Paolo Molaro <lupus@ximian.com>
+
+	* configure.in, mono.pc.in, */Makefile.am: istall the header
+	files in a API version specific directory.
+
 2006-12-07  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* data/browscap.ini: added msdomversion for ie6/7,
